--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+.title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #04838f;
+  border-radius: 20px;
+  padding: 10px;
+  height: 50px;
+  color: white;
+  width: fit-content;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 40px;
+}
