fixe title importation

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
   <div class="title">
-    <h1>Medal Per Country</h1>
+    <app-title [title]="'Medal Per Country'"></app-title>
   </div>
 </div>
