import information component to home page and add some css

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,4 +2,9 @@
   <div class="title">
     <app-title [title]="'Medal Per Country'"></app-title>
   </div>
+
+  <div class="informations-container">
+    <app-informations [textInformation]="'Number of JOs'" [numberInformation]="3"></app-informations>
+    <app-informations [textInformation]="'Number of Countries'" [numberInformation]="5"></app-informations>
+  </div>
 </div>
