--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,3 +18,19 @@
   justify-content: center;
   padding: 40px;
 }
+
+.informations-container {
+  margin-top: 30px;
+  display: flex;
+  width: 50%;
+  justify-content: space-around;
+  .informations {
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #007f8c;
+    border-radius: 5px;
+  }
+}
