add on select function and route to details

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,7 +9,7 @@
   </div>
 
   <div class="pie-chart-container">
-    <ngx-charts-pie-chart [view]="view" [results]="chartData" [gradient]="gradient"  [labels]="showLabels" [doughnut]="isDoughnut">
+    <ngx-charts-pie-chart [view]="view" [results]="chartData" [gradient]="gradient"  [labels]="showLabels" [doughnut]="isDoughnut" (select)="onSelect($event)">
     </ngx-charts-pie-chart>
   </div>
 </div>
