--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,8 +4,8 @@
   </div>
 
   <div class="informations-container">
-    <app-informations [textInformation]="'Number of JOs'" [numberInformation]="3"></app-informations>
-    <app-informations [textInformation]="'Number of Countries'" [numberInformation]="5"></app-informations>
+    <app-informations [textInformation]="'Number of JOs'" [numberInformation]="'3'"></app-informations>
+    <app-informations [textInformation]="'Number of Countries'" [numberInformation]="'5'"></app-informations>
   </div>
 
   <div class="pie-chart-container">
