--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,3 +37,15 @@
     border-radius: 5px;
   }
 }
+
+
+.go-back {
+  align-self: start;
+  button {
+    background-color: #04838f;
+    color: white;
+    padding: 5px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 600;
+  }
+}
