add chart-container css

--- a/src/app/informations/informations.component.scss
+++ b/src/app/informations/informations.component.scss
@@ -6,4 +6,9 @@
   justify-content: center;
   border: 1px solid #007f8c;
   border-radius: 5px;
+
+  p, h3 {
+    margin: 5px;
+    font-size: 3vw;
+  }
 }
