--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -18,7 +18,7 @@
     </app-informations>
   </div>
 
-  <div class="pie-chart-container">
+  <div class="chart-container">
     <ngx-charts-line-chart [view]="view"
                            [showXAxisLabel]="showXAxisLabel"
                            [showYAxisLabel]="showYAxisLabel"
