--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,7 +8,7 @@
     <app-informations [textInformation]="'Number of Countries'" [numberInformation]="5"></app-informations>
   </div>
 
-  <div class="pie-chart-container">
+  <div class="chart-container">
     <ngx-charts-pie-chart [view]="view" [results]="chartData" [gradient]="gradient"  [labels]="showLabels" [doughnut]="isDoughnut" (select)="onSelect($event)">
     </ngx-charts-pie-chart>
   </div>
