--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 .title {
+  margin: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,16 +17,15 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 40px;
+  padding: 3%;
 }
 
 .informations-container {
-  margin-top: 30px;
+  margin: 30px 0;
   display: flex;
   width: 100%;
   justify-content: space-around;
   margin-bottom: 20px;
-  max-width: 800px;
   text-align: center;
 }
 
